# InsightOS

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 202606230001_create_research_evidence_chain.py  202606230002_add_raw_data_update_logs.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  prompts.py
backend/app/api/: analysis.py  archetypes.py  company_research.py  connectors.py  demo.py  health.py
backend/app/connectors/: __init__.py  base.py  fred.py  market_prices.py  sec.py
backend/app/core/: __init__.py  config.py
backend/app/db/: base.py  demo_data.py  session.py
backend/app/models/: __init__.py  research.py
backend/app/schemas/: __init__.py  research.py
backend/app/services/: agents.py  archetypes.py  company_research.py  data_ingestion.py  demo_research.py  financial_analysis.py  quality.py
backend/app/tasks/: data_updates.py
backend/tests/: test_agents_quality.py  test_analysis_api.py  test_archetypes.py  test_company_research.py  test_connectors.py  test_demo_research.py  test_financial_analysis.py  test_health.py  test_research_evidence_chain.py
backend/tests/fixtures/: fred_observations.json  sec_company_facts.json  sec_company_profile.json
docs/: BRD.md  agent-schemas.json  archetype-schema.json  architecture.md  data-dictionary.md  formulas.md  prd.md  research-quality.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next-env.d.ts  package-lock.json  package.json
scripts/: doctor.sh  (+3 more)
(+19 files in other folders)
